<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DataRequestedEditor"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/editor_product_name"
                style="@style/DataFilledOutEditor"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DataRequestedEditor"
                android:text="@string/product_price" />

            <EditText
                android:id="@+id/editor_product_price"
                style="@style/DataFilledOutEditor"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DataRequestedEditor"
                android:text="@string/product_stock" />

            <EditText
                android:id="@+id/editor_product_quantity"
                style="@style/DataFilledOutEditor"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DataRequestedEditor"
                android:text="@string/supplier_name" />

            <EditText
                android:id="@+id/editor_supplier_name"
                style="@style/DataFilledOutEditor"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DataRequestedEditor"
                android:text="@string/supplier_email" />

            <EditText
                android:id="@+id/editor_supplier_email"
                style="@style/DataFilledOutEditor"
                android:hint="@string/supplier_email_hint"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <Button
            android:id="@+id/button_add_image"
            style="@style/AddPhotoButton"
            android:text="@string/add_photo" />

        <ImageView
            android:id="@+id/editor_product_image"
            style="@style/ImageViewEditor" />

    </LinearLayout>

</ScrollView>
